--- a/doc_root/php.ini
+++ b/doc_root/php.ini
@@ -12,4 +12,7 @@ magic_quotes_runtime            = Off
 magic_quotes_gpc                = Off
 magic_quotes_sybase             = Off
 allow_url_fopen                 = Off
-include_path = ".:/kunden/homepages/15/d69847279/htdocs/uska-xp/xp.uska-head/skeleton:/kunden/homepages/15/d69847279/htdocs/uska-xp/xp.uska-head/ports/classes"
+include_path = ".:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.0.1/lib/xp-rt-5.6.2.xar:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.0.1/lib/uska-2.0.1.xar:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.0.1/lib/"
+
+[date]
+date.timezone			= Europe/Berlin
