--- a/etc/log.ini
+++ b/etc/log.ini
@@ -6,4 +6,4 @@
 [default]
 appenders="util.log.FileAppender"
 appender.util.log.FileAppender.params="filename"
-appender.util.log.FileAppender.param.filename="/var/log/xp/uska-%Y-%m-%d.log"
+appender.util.log.FileAppender.param.filename="uska-%Y-%m-%d.log"
