- add php.ini for /rss - set default state to events - use scriptlet.production - drop requirement of unneeded classes
git-svn-id: http://svn.xp-framework.net/xpforge/trunk/projects/www/uska@10211 d2cacbed-c0f6-0310-851a-9dad52fc623a

--- a/doc_root/.htaccess
+++ b/doc_root/.htaccess
@@ -1,11 +1,12 @@
 RewriteEngine On
-RewriteRule xml/([a-zA-Z]+)[.:;]([a-zA-Z_]+)([.:;]psessionid=([0-9A-Za-z]+))?/([a-zA-Z/]+)$ /index.php [E=PRODUCT:$1,E=LANGUAGE:$2,E=SESS:$4,E=STATE:$5,PT]
+RewriteRule xml/ /index.php [PT]
 
 DirectoryIndex index.php index.html
 
 SetEnv DEF_PROD uska
 SetEnv DEF_LANG de_DE
-SetEnv DEF_STATE news
+SetEnv DEF_STATE events
+
 
 CheckSpelling off
 AddType x-mapp-php5 .php
