--- a/doc_root/php.ini
+++ b/doc_root/php.ini
@@ -12,7 +12,7 @@ magic_quotes_runtime            = Off
 magic_quotes_gpc                = Off
 magic_quotes_sybase             = Off
 allow_url_fopen                 = Off
-include_path = ".:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.1.0/lib/xp-rt-5.6.7RC1.xar:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.1.0/lib/uska-2.1.0.xar:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.1.0/lib/"
+include_path = ".:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.1.3/lib/xp-rt-5.7.7.xar:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.1.3/lib/uska-2.1.3.xar:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.1.3/lib/"
 
 [date]
 date.timezone			= Europe/Berlin
