- Update ChangeLog - make RSS feed work
git-svn-id: http://svn.xp-framework.net/xpforge/trunk/projects/www/uska@12508 d2cacbed-c0f6-0310-851a-9dad52fc623a

--- a/etc/web.ini
+++ b/etc/web.ini
@@ -1,5 +1,5 @@
 [app]
-mappings="/:uska"
+mappings="/rss/:rss|/:uska"
 
 [app::uska]
 class="de.uska.scriptlet.UskaScriptlet"
@@ -8,3 +8,6 @@ init-envs="DEF_PROD:uska|DEF_LANG:de_DE|DEF_STATE:news"
 
 [app::uska@dev]
 debug="ERRORS|XML|STACKTRACE"
+
+[app::rss]
+class="de.uska.scriptlet.RssFeedScriptlet"
