- improve module config - initial apache config
git-svn-id: http://svn.xp-framework.net/xpforge/trunk/projects/www/uska@12665 d2cacbed-c0f6-0310-851a-9dad52fc623a

--- a/ivy.xml
+++ b/ivy.xml
@@ -9,9 +9,9 @@
   </configurations>
   <publications>
     <artifact name="uska" type="xar" ext="xar" conf="default"/>
-    <artifact name="uska-web" type="zip" ext="zip" conf="default"/>
+    <artifact name="uska-webapp" type="zip" ext="zip" conf="default"/>
   </publications>
   <dependencies>
-    <dependency org="net.xp_framework" name="core" rev="5.8"/>
+    <dependency org="net.xp_framework" name="core" rev="5.8" conf="default->default; test->test"/>
   </dependencies>
 </ivy-module>
