--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-15"?>
 <project name="uska">
   <import file="${user.home}/.ant/xp-build/build-loader.xml"/>
+  <import file="${user.home}/.ant/xp-build/build-webapp.xml"/>
 </project>
