--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,29 @@
         <version>3.1.8</version>
         <extensions>true</extensions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.4</version>
+      </plugin>
     </plugins>
   </build>
+
+  <!-- Source code management -->
+  <scm>
+    <connection>scm:git:git://github.com/kiesel/uska.git</connection>
+    <developerConnection>scm:git:git@github.com:kiesel/uska.git</developerConnection>
+    <url>https://github.com/kiesel/uska</url>
+  </scm>
+
+  <!-- Issue management -->
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/kiesel/uska/issues</url>
+  </issueManagement>
 </project>
