- establish multiple config profiles

--- a/src/main/etc/web.ini
+++ b/src/main/etc/web.ini
@@ -3,8 +3,9 @@ mappings="/rss/:rss|/:uska"
 
 [app::uska]
 class="de.uska.scriptlet.UskaScriptlet"
-init-params="de.uska.scriptlet|{WEBROOT}/xsl"
+init-params="de.uska|{WEBROOT}/xsl"
 init-envs="DEF_PROD:uska|DEF_LANG:de_DE|DEF_STATE:news"
+prop-base="{WEBROOT}/etc/{PROFILE}|{WEBROOT}/etc/prod"
 
 [app::uska@dev]
 debug="ERRORS|XML|STACKTRACE"
