--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.4</version>
       </plugin>
+
       <!-- <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
@@ -77,6 +78,14 @@
         </configuration>
       </plugin> -->
     </plugins>
+
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.wagon</groupId>
+         <artifactId>wagon-ssh-external</artifactId>
+         <version>1.0-beta-6</version>
+      </extension>
+    </extensions>
   </build>
 
   <!-- Source code management -->
@@ -91,4 +100,12 @@
     <system>GitHub</system>
     <url>https://github.com/kiesel/uska/issues</url>
   </issueManagement>
+
+  <!-- Distribution -->
+  <distributionManagement>
+    <repository>
+      <id>uska-repository</id>
+      <url>scpexe://uska.de/kunden/homepages/15/d69847279/htdocs/artifacts/</url>
+    </repository>
+  </distributionManagement>
 </project>
