--- a/src/main/webapp/php.ini
+++ b/src/main/webapp/php.ini
@@ -12,7 +12,7 @@ magic_quotes_runtime            = Off
 magic_quotes_gpc                = Off
 magic_quotes_sybase             = Off
 allow_url_fopen                 = Off
-include_path = ".:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.1.5/lib/xp-rt-5.7.10.xar:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.1.5/lib/uska-2.1.5.xar:/kunden/homepages/15/d69847279/htdocs/uska-xp/uska-2.1.5/lib/"
+include_path = "~:~/lib/bootstrap"
 
 [date]
 date.timezone			= Europe/Berlin
